--- a/NEWS
+++ b/NEWS
@@ -7,25 +7,25 @@
 </item>
 
 <item>
-<title>[COLOR darkgreen]Online[/COLOR] AL JAZEERA</title>
+<title>[COLOR white]LIVE:[/COLOR] [COLOR turquoise]AL JAZEERA[/COLOR]</title>
 <link>http://aljazeera-eng-apple-live.adaptive.level3.net/apple/aljazeera/english/appleman.m3u8</link>
 <thumbnail>http://i376.photobucket.com/albums/oo204/indiecrew/Asean%20TV/aljazeera_zpsnxe8ri2p.png</thumbnail>
 </item>
 
 <item>
-<title>[COLOR darkgreen]Online[/COLOR] ABC NEWS</title>
+<title>[COLOR white]LIVE:[/COLOR] [COLOR turquoise]ABC NEWS[/COLOR]</title>
 <link>http://abclive.abcnews.com/i/abc_live4@136330/master.m3u8?b=500,300,700,900,1200</link>
 <thumbnail>http://i376.photobucket.com/albums/oo204/indiecrew/Asean%20TV/abcnews_zps5dxg2syf.png</thumbnail>
 </item>
 
 <item>
-<title>[COLOR darkgreen]Online[/COLOR] AFRICA NEWS NETWORK</title>
+<title>[COLOR white]LIVE:[/COLOR] [COLOR turquoise]AFRICA NEWS NETWORK[/COLOR]</title>
 <link>rtmp://46.4.25.213/live-ann7/ann7-hi.stream</link>
 <thumbnail>http://i376.photobucket.com/albums/oo204/indiecrew/MR%20Network%20TV/ann7_zps7gizqg1d.png</thumbnail>
 </item>
 
 <item>
-<title>[COLOR darkgreen]Online[/COLOR] BBC NEWS</title>
+<title>[COLOR white]LIVE:[/COLOR] [COLOR turquoise]BBC NEWS[/COLOR]</title>
 <link>http://nimlive1.giniko.com/bbcnews/bbcnews.stream/playlist.m3u8?wmsAuthSign=$doregex[tok]</link>
 <regex>
 <name>tok</name>
@@ -37,19 +37,19 @@
 </item>
 
 <item>
-<title>[COLOR darkgreen]Online[/COLOR] BLOOMBERG</title>
+<title>[COLOR white]LIVE:[/COLOR] [COLOR turquoise]BLOOMBERG[/COLOR]</title>
 <link>http://btv-i.akamaihd.net/hls/live/202760/btvusa_ios/P1/M18K.m3u8</link>
 <thumbnail>http://i376.photobucket.com/albums/oo204/indiecrew/Asean%20TV/bloomberg_zpswkt8cx1k.png</thumbnail>
 </item>
 
 <item>
-<title>[COLOR darkgreen]Online[/COLOR] CBS NEWS</title>
+<title>[COLOR white]LIVE:[/COLOR] [COLOR turquoise]CBS NEWS[/COLOR]</title>
 <link>http://cbsnews-linear.mdialog.com/video_assets/cbsnews.m3u8?api_key=563b80c1ae4ce359830f572d2496a947&amp;iu=/8264/vaw-can/mobile_web/cbsnews_mobile</link>
 <thumbnail>http://i376.photobucket.com/albums/oo204/indiecrew/MR%20Network%20TV/cbs_zpspxjvu2fw.png</thumbnail>
 </item>
 
 <item>
-<title>[COLOR red]Offline[/COLOR] CNN</title>
+<title>[COLOR red]OFF:[/COLOR] [COLOR turquoise]CNN[/COLOR]</title>
 <link>http://nimlive1.giniko.com/cnninternasional/cnninternasional.stream/playlist.m3u8?wmsAuthSign=$doregex[tok]</link>
 <regex>
 <name>tok</name>
@@ -61,55 +61,55 @@
 </item>
 
 <item>
-<title>[COLOR red]Offline[/COLOR] CNBC</title>
+<title>[COLOR red]OFF:[/COLOR] [COLOR turquoise]CNBC[/COLOR]</title>
 <link>.</link>
 <thumbnail>http://i376.photobucket.com/albums/oo204/indiecrew/Asean%20TV/cnbc_zpsb2hwcbdj.png</thumbnail>
 </item>
 
 <item>
-<title>[COLOR red]Offline[/COLOR] CHCH</title>
+<title>[COLOR red]OFF:[/COLOR] [COLOR turquoise]CHCH[/COLOR]</title>
 <link>.</link>
 <thumbnail>http://i376.photobucket.com/albums/oo204/indiecrew/MR%20Network%20TV/chch_zpsj1nfnhpi.png</thumbnail>
 </item>
 
 <item>
-<title>[COLOR darkgreen]Online[/COLOR] C-SPAN 1</title>
+<title>[COLOR white]LIVE:[/COLOR] [COLOR turquoise]C-SPAN 1[/COLOR]</title>
 <link>http://cspan1-lh.akamaihd.net/i/cspan1_1@304727/index_1000_av-p.m3u8?sd=10&amp;rebase=on</link>
 <thumbnail>http://i376.photobucket.com/albums/oo204/indiecrew/MR%20Network%20TV/cspan_zpsp6pbxtut.png</thumbnail>
 </item>
 
 <item>
-<title>[COLOR darkgreen]Online[/COLOR] C-SPAN 2</title>
+<title>[COLOR white]LIVE:[/COLOR] [COLOR turquoise]C-SPAN 2[/COLOR]</title>
 <link>http://cspan2-lh.akamaihd.net/i/cspan2_1@304728/index_1000_av-p.m3u8?sd=10&amp;rebase=on</link>
 <thumbnail>http://i376.photobucket.com/albums/oo204/indiecrew/MR%20Network%20TV/cspan_zpsp6pbxtut.png</thumbnail>
 </item>
 
 <item>
-<title>[COLOR darkgreen]Online[/COLOR] C-SPAN 3</title>
+<title>[COLOR white]LIVE:[/COLOR] [COLOR turquoise]C-SPAN 3[/COLOR]</title>
 <link>http://cspan3-lh.akamaihd.net/i/cspan3_1@304729/index_1000_av-p.m3u8?sd=10&amp;rebase=on</link>
 <thumbnail>http://i376.photobucket.com/albums/oo204/indiecrew/MR%20Network%20TV/cspan_zpsp6pbxtut.png</thumbnail>
 </item>
 
 <item>
-<title>[COLOR darkgreen]Online[/COLOR] DEUTSCHE WELLE</title>
+<title>[COLOR white]LIVE:[/COLOR] [COLOR turquoise]DEUTSCHE WELLE[/COLOR]</title>
 <link>http://metafilegenerator.de/DWelle/tv-asia/ios/master.m3u8</link>
 <thumbnail>http://i376.photobucket.com/albums/oo204/indiecrew/MR%20Network%20TV/dwtv_zps96opuogn.png</thumbnail>
 </item>
 
 <item>
-<title>[COLOR darkgreen]Online[/COLOR] EURONEWS</title>
+<title>[COLOR white]LIVE:[/COLOR] [COLOR turquoise]EURONEWS[/COLOR]</title>
 <link>http://fr-par-iphone-1.cdn.hexaglobe.net/streaming/euronews_ewns/ipad_en.m3u8</link>
 <thumbnail>http://i376.photobucket.com/albums/oo204/indiecrew/Asean%20TV/euronews_zpsbcnzxgnw.png</thumbnail>
 </item>
 
 <item>
-<title>[COLOR darkgreen]Online[/COLOR] FRANCE24</title>
+<title>[COLOR white]LIVE:[/COLOR] [COLOR turquoise]FRANCE24[/COLOR]</title>
 <link>http://f24hls-i.akamaihd.net/hls/live/221193/F24_EN_LO_HLS/master_900.m3u8</link>
 <thumbnail>http://i376.photobucket.com/albums/oo204/indiecrew/Asean%20TV/france24_zpsvwqlbpqa.png</thumbnail>
 </item>
 
 <item>
-<title>[COLOR darkgreen]Online[/COLOR] FOX NEWS</title>
+<title>[COLOR white]LIVE:[/COLOR] [COLOR turquoise]FOX NEWS[/COLOR]</title>
 <link>http://live.dianshibo.com/$doregex[m3u8]</link>
 <regex>
   <name>m3u8</name>
@@ -122,49 +122,49 @@
 </item>
 
 <item>
-<title>[COLOR darkgreen]Online[/COLOR] i24NEWS [COLOR skyblue](Youtube)[/COLOR]</title>
+<title>[COLOR white]LIVE:[/COLOR] [COLOR turquoise]i24NEWS[/COLOR] [COLOR skyblue](Youtube)[/COLOR]</title>
 <link>plugin://plugin.video.youtube/play/?video_id=Msgo-R3zZuM</link>
 <thumbnail>http://i376.photobucket.com/albums/oo204/indiecrew/Asean%20TV/i24news_zps8ktsn1gv.png</thumbnail>
 </item>
 
 <item>
-<title>[COLOR darkgreen]Online[/COLOR] KTVU NEWS</title>
+<title>[COLOR white]LIVE:[/COLOR] [COLOR turquoise]KTVU NEWS[/COLOR]</title>
 <link>http://54.163.107.81/server/play/ktvutestctg/master.m3u8</link>
 <thumbnail>http://i376.photobucket.com/albums/oo204/indiecrew/MR%20Network%20TV/ktvu_zpsywnvszgd.png</thumbnail>
 </item>
 
 <item>
-<title>[COLOR darkgreen]Online[/COLOR] PRESS TV</title>
+<title>[COLOR white]LIVE:[/COLOR] [COLOR turquoise]PRESS TV[/COLOR]</title>
 <link>http://presstv-ch03.akamai.hls.live.cdn.overon.es/livehigh/playlist.m3u8</link>
 <thumbnail>http://i376.photobucket.com/albums/oo204/indiecrew/MR%20Network%20TV/presstv_zpsnnmwytxy.png</thumbnail>
 </item>
 
 <item>
-<title>[COLOR darkgreen]Online[/COLOR] RUSSIA TODAY</title>
+<title>[COLOR white]LIVE:[/COLOR] [COLOR turquoise]RUSSIA TODAY[/COLOR]</title>
 <link>http://rt-a.akamaihd.net/ch_01@325605/master.m3u8</link>
 <thumbnail>http://i376.photobucket.com/albums/oo204/indiecrew/Asean%20TV/rt_zpskd3vsleb.png</thumbnail>
 </item>
 
 <item>
-<title>[COLOR darkgreen]Online[/COLOR] REUTERS</title>
+<title>[COLOR white]LIVE:[/COLOR] [COLOR turquoise]REUTERS[/COLOR]</title>
 <link>http://37.58.85.156/rlo001/ngrp:rlo001.stream_all/playlist.m3u8</link>
 <thumbnail>http://i376.photobucket.com/albums/oo204/indiecrew/Asean%20TV/reuters_zpstuglastn.png</thumbnail>
 </item>
 
 <item>
-<title>[COLOR darkgreen]Online[/COLOR] SKY NEWS [COLOR skyblue](Youtube)[/COLOR]</title>
+<title>[COLOR white]LIVE:[/COLOR] [COLOR turquoise]SKY NEWS[/COLOR] [COLOR skyblue](Youtube)[/COLOR]</title>
 <link>plugin://plugin.video.youtube/play/?video_id=y60wDzZt8yg</link>
 <thumbnail>http://i376.photobucket.com/albums/oo204/indiecrew/Asean%20TV/skynews_zpsnha7ospw.png</thumbnail>
 </item>
 
 <item>
-<title>[COLOR darkgreen]Online[/COLOR] TWIT TV</title>
+<title>[COLOR white]LIVE:[/COLOR] [COLOR turquoise]TWIT TV[/COLOR]</title>
 <link>http://twit.live-s.cdn.bitgravity.com/cdn-live-s1/_definst_/twit/live/high/playlist.m3u8</link>
 <thumbnail>http://i376.photobucket.com/albums/oo204/indiecrew/Asean%20TV/twit_zpsfxfxpher.png</thumbnail>
 </item>
 
 <item>
-<title>[COLOR red]Offline[/COLOR] WFTV CHANNEL 9</title>
+<title>[COLOR red]OFF:[/COLOR] [COLOR turquoise]WFTV CHANNEL 9[/COLOR]</title>
 <link>http://bcoveliveios-i.akamaihd.net/hls/live/207141/268012959001/WFTV_EVENTLIVE1/WFTV_EVENTLIVE1_800.m3u8</link>
 <thumbnail>http://i376.photobucket.com/albums/oo204/indiecrew/MR%20Network%20TV/wftv_zpst2nwzmac.png</thumbnail>
 </item>
