--- a/NEWS
+++ b/NEWS
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes" ?>
 
 <item>
-<title>[COLOR lightgreen]Last Update: July 01, 2016[/COLOR]</title>
+<title>[COLOR lightgreen]Last Update: July 14, 2016[/COLOR]</title>
 <link>http://ignoreme</link>
 <thumbnail></thumbnail>
 </item>
@@ -109,7 +109,7 @@
 </item>
 
 <item>
-<title>[COLOR white]LIVE:[/COLOR] [COLOR turquoise]FOX NEWS[/COLOR]</title>
+<title>[COLOR red]OFF:[/COLOR] [COLOR turquoise]FOX NEWS[/COLOR]</title>
 <link>http://live.dianshibo.com/$doregex[m3u8]</link>
 <regex>
   <name>m3u8</name>
@@ -131,6 +131,12 @@
 <title>[COLOR white]LIVE:[/COLOR] [COLOR turquoise]KTVU NEWS[/COLOR]</title>
 <link>http://54.163.107.81/server/play/ktvutestctg/master.m3u8</link>
 <thumbnail>http://i376.photobucket.com/albums/oo204/indiecrew/MR%20Network%20TV/ktvu_zpsywnvszgd.png</thumbnail>
+</item>
+
+<item>
+<title>[COLOR white]LIVE:[/COLOR] [COLOR turquoise]NASA TV[/COLOR]</title>
+<link>http://nasatv-lh.akamaihd.net/i/NASA_101@319270/master.m3u8</link>
+<thumbnail>http://i376.photobucket.com/albums/oo204/indiecrew/MR%20Network%20TV/nasatv_zpsuihlxyyh.png</thumbnail>
 </item>
 
 <item>
