--- a/NEWS
+++ b/NEWS
@@ -25,6 +25,12 @@
 </item>
 
 <item>
+<title>[COLOR white]LIVE:[/COLOR] [COLOR turquoise]BEIN NEWS[/COLOR]</title>
+<link>http://besmenaah-i.akamaihd.net/hls/live/221906/besmena02h/04.m3u8</link>
+<thumbnail></thumbnail>
+</item>
+
+<item>
 <title>[COLOR white]LIVE:[/COLOR] [COLOR turquoise]BBC NEWS[/COLOR]</title>
 <link>http://nimlive1.giniko.com/bbcnews/bbcnews.stream/playlist.m3u8?wmsAuthSign=$doregex[tok]</link>
 <regex>
@@ -131,6 +137,12 @@
 <title>[COLOR white]LIVE:[/COLOR] [COLOR turquoise]KTVU NEWS[/COLOR]</title>
 <link>http://54.163.107.81/server/play/ktvutestctg/master.m3u8</link>
 <thumbnail>http://i376.photobucket.com/albums/oo204/indiecrew/MR%20Network%20TV/ktvu_zpsywnvszgd.png</thumbnail>
+</item>
+
+<item>
+<title>[COLOR white]LIVE:[/COLOR] [COLOR turquoise]LONDON LIVE[/COLOR]</title>
+<link>http://bcoveliveios-i.akamaihd.net/hls/live/217434/3083279840001/master_900.m3u8</link>
+<thumbnail></thumbnail>
 </item>
 
 <item>
