--- a/NEWS
+++ b/NEWS
@@ -142,7 +142,7 @@
 <item>
 <title>[COLOR white]LIVE:[/COLOR] [COLOR turquoise]LONDON LIVE[/COLOR]</title>
 <link>http://bcoveliveios-i.akamaihd.net/hls/live/217434/3083279840001/master_900.m3u8</link>
-<thumbnail></thumbnail>
+<thumbnail>http://i376.photobucket.com/albums/oo204/indiecrew/MR%20Network%20TV/londonlive_zpscg9rsg4f.png</thumbnail>
 </item>
 
 <item>
